--- a/long_read_qc/03-ONT.Rmd
+++ b/long_read_qc/03-ONT.Rmd
@@ -1,4 +1,4 @@
-# ONT
+# ONT {#ont}
 ```{r, fig.align = 'center',out.width= '60%', echo=FALSE }
 knitr::include_graphics(path = "figures/ONT_logo.png", auto_pdf = TRUE)
 ``` 
