--- a/long_read_qc/04-PB.Rmd
+++ b/long_read_qc/04-PB.Rmd
@@ -1,4 +1,4 @@
-# PacBio
+# PacBio {#pb}
 
 ```{r, fig.align = 'center',out.width= '40%', echo=FALSE }
 knitr::include_graphics(path = "figures/Pacbio_logo.png", auto_pdf = TRUE)
