--- a/Illumina_QC/01-Illumina_Quality_Control.Rmd
+++ b/Illumina_QC/01-Illumina_Quality_Control.Rmd
@@ -8,6 +8,9 @@ documentclass: book
 bibliography: [book.bib, packages.bib]
 biblio-style: apalike
 link-citations: yes
+favicon: figures/NEOF_favicon.png
+description: NEOF book for the Illumina quality control workshop
+cover-image: "figures/NEOF.png"
 ---
 
 ```{r, fig.align = 'center',out.width= '30%', echo=FALSE }
@@ -21,8 +24,9 @@ knitr::include_graphics(path = "figures/nt_base_colours.png", auto_pdf = TRUE)
 
 This practical session aims to introduce you to Illumina Quality Control. The topics covered are:
 
-- Logging in to our teaching environment
-- Acquiring the workshop data
-- Examples of quality control of genomic data
-- Quality control of Whole genome shotgun data
-- Quality control of 16S rRNA metagenetic data
+- [Logging in to our teaching environment](#cluster)
+- [Acquiring the workshop data](#data)
+- [Quality control of good quality genomic data](#goodtutorial)
+- [Quality control of poor quality genomic data](#poortutorial)
+- [Quality control of Whole genome shotgun data](#shotgun)
+- [Quality control of 16S rRNA metagenetic data](#metagenetics)
