--- a/long_read_qc/01-Long_read_QC.Rmd
+++ b/long_read_qc/01-Long_read_QC.Rmd
@@ -8,6 +8,9 @@ documentclass: book
 bibliography: [book.bib, packages.bib]
 biblio-style: apalike
 link-citations: yes
+favicon: figures/NEOF_favicon.png
+description: NEOF book for the Long read quality control workshop
+cover-image: "figures/NEOF.png"
 ---
 
 ```{r, fig.align = 'center',out.width= '30%', echo=FALSE }
@@ -21,8 +24,7 @@ knitr::include_graphics(path = "figures/well.png", auto_pdf = TRUE)
 
 This practical session aims to introduce you to Long read Quality Control. The topics covered are:
 
-- Acquiring the workshop data
-- Example of ONT quality control
-- Example of PacBio quality control
-- Practice data
-- Further resources
+- [Acquiring the workshop data](#data)
+- [ONT quality control](#ont)
+- [PacBio quality control](#pb)
+- [Practice data](#practice)
