--- a/Illumina_QC/Illumina Quality Control.Rmd
+++ b/Illumina_QC/Illumina Quality Control.Rmd
@@ -31,6 +31,8 @@ This practical session aims to introduce you to Illumina Quality Control. The to
 - [Quality control of Whole genome shotgun data](#shotgun)
 - [Quality control of 16S rRNA metagenetic data](#metagenetics)
 
+<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons Licence" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
+
 <!--chapter:end:01-Illumina_Quality_Control.Rmd-->
 
 # Cluster Introduction {#cluster}
