--- a/long_read_qc/01-Long_read_QC.Rmd
+++ b/long_read_qc/01-Long_read_QC.Rmd
@@ -28,3 +28,5 @@ This practical session aims to introduce you to Long read Quality Control. The t
 - [ONT quality control](#ont)
 - [PacBio quality control](#pb)
 - [Practice data](#practice)
+
+<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons Licence" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
