--- a/long_read_qc/Long read Quality Control.Rmd
+++ b/long_read_qc/Long read Quality Control.Rmd
@@ -48,16 +48,10 @@ Check you have the directory.
 ls ~
 ```
 
-To add some more recently added PacBio files to your home directory run the following command:
+If you do not have the \"QC_workshop\" directory, the command to copy it all to your home directory is below.
 
 ```{bash eval=FALSE}
-cp -r /pub39/tea/matthew/NEOF/QC_workshop/PB_QC ~/QC_workshop/PB_QC
-```
-
-Or if you do not have the \"QC_workshop\" directory at all the command to copy it all to your home directory is below.
-
-```{bash eval=FALSE}
-cp -r /pub39/tea/matthew/NEOF/QC_workshop/ ~
+cp -r /pub39/nsc006/NEOF/QC_workshop/ ~
 ```
 
 <!--chapter:end:02-Intro.Rmd-->
@@ -328,9 +322,9 @@ NanoPlot -t 4 \
 You may get the below warning. This is fine and can be ignored.
 
 ```{bash, eval = FALSE}
-/pub37/matt/programs_chos_8/anaconda3/lib/python3.7/_collections_abc.py:702: MatplotlibDeprecationWarning: The global colormaps dictionary is no longer considered public API.
+/pub39/tea/nsc006/anaconda3/lib/python3.7/_collections_abc.py:702: MatplotlibDeprecationWarning: The global colormaps dictionary is no longer considered public API.
   return len(self._mapping)
-/pub37/matt/programs_chos_8/anaconda3/lib/python3.7/_collections_abc.py:720: MatplotlibDeprecationWarning: The global colormaps dictionary is no longer considered public API.
+/pub39/tea/nsc006/anaconda3/lib/python3.7/_collections_abc.py:720: MatplotlibDeprecationWarning: The global colormaps dictionary is no longer considered public API.
   yield from self._mapping
 ```
 
